[package]
name = "ntexsock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
ntex = { version = "0.6.0", features = ["tokio"] }
ntex-files = { version = "0.2" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[patch.crates-io]
ntex-files = { git = "https://github.com/ntex-rs/ntex-extras.git" }
